--- a/env/Prod/playbook.yml
+++ b/env/Prod/playbook.yml
@@ -1,23 +1,48 @@
 - hosts: terraform-ansible
+  become: yes
+  vars:
+    app_user: ec2-user
+    app_dir: "/home/{{ app_user }}/tcc"
+    venv_dir: "{{ app_dir }}/venv"
+
   tasks:
-  - name: Instalando o python3, virtualenv
-    apt:
-      pkg:
-      - python3
-      - virtualenv
-      update_cache: yes
-    become: yes
-  - name: Instalando dependencias com pip (Django e Django Rest)
-    pip:
-      virtualenv: /home/ubuntu/tcc/venv
-      name:
-        - django
-        - djangorestframework
-  - name: Iniciando o projeto
-    shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
-  - name: Alterando o hosts do settings
-    lineinfile:
-      path: /home/ubuntu/tcc/setup/settings.py
-      regexp: 'ALLOWED_HOSTS'
-      line: 'ALLOWED_HOSTS = ["*"]'
-      backrefs: yes
+    - name: Instalando python3, pip e git (Amazon Linux 2023)
+      ansible.builtin.dnf:
+        name:
+          - python3
+          - python3-pip
+          - git
+        state: present
+        update_cache: yes
+
+    - name: Instalando virtualenv via pip
+      ansible.builtin.pip:
+        name: virtualenv
+        executable: pip3
+
+    - name: Git Clone do projeto
+      ansible.builtin.git:
+        repo: "https://github.com/guilhermeonrails/clientes-leo-api.git"
+        dest: "{{ app_dir }}"
+        version: master
+        force: yes
+
+    - name: Instalando dependencias com pip (Django e Django Rest) no virtualenv
+      ansible.builtin.pip:
+        virtualenv: "{{ venv_dir }}"
+        requirements: "{{ app_dir }}/requirements.txt"
+
+    - name: Alterando o ALLOWED_HOSTS do settings
+      ansible.builtin.lineinfile:
+        path: "{{ app_dir }}/setup/settings.py"
+        regexp: '^ALLOWED_HOSTS\s*='
+        line: 'ALLOWED_HOSTS = ["*"]'
+
+    - name: configurando o banco de dados
+      shell: ". {{ venv_dir }}/bin/activate; python /home/{{ app_user }}/tcc/manage.py migrate"
+
+    - name: carregando os dados iniciais
+      shell: ". {{ venv_dir }}/bin/activate; python /home/{{ app_user }}/tcc/manage.py loaddata clientes.json"
+
+    - name: Iniciando o servidor
+      shell: ". {{ venv_dir }}/bin/activate; nohup python /home/{{ app_user }}/tcc/manage.py runserver 0.0.0.0:8000 &"
